--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.css",
               "src/assets/css/nucleo-icons.css",
@@ -43,7 +40,7 @@
               "src/assets/js/plugins/smooth-scrollbar.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "src//assets/js/plugins/perfect-scrollbar.min.js",
-              "src/assets/js/material-dashboard.js",
+              "src/assets/js/material-dashboard.min.js",
               "src/assets/js/plugins/chartjs.min.js",
               "src/assets/js/main.js"
             ]
@@ -106,10 +103,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
