--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
+    "html-to-pdfmake": "^2.3.9",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
+    "ngx-audio-player": "^11.0.4",
     "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.2.1",
     "nice-invoice": "^1.1.7",
+    "pdfmake": "^0.2.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -36,6 +40,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
